--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,16 @@
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+	
+    <filter>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>system.filter.UserFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <servlet-name>UserFilter</servlet-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
 </web-app>
